--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,19 @@ env:
     - GIT_SHA=$(git rev-parse HEAD)
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
-  - openssl aes-256-cbc -K $encrypted_9f3b5599b056_key -iv $encrypted_9f3b5599b056_iv -in service-account.json.enc -out service-account.json -d
+  - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project shaped-timing-292814
-  - gcloud config set compute/zone europe-west2-a 
+  - gcloud config set compute/zone europe-west2-a
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t antoniotre86/react-tests -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true antoniotre86/react-tests npm test
+  - docker run antoniotre86/react-tests npm test -- --coverage
 
 deploy:
   provider: script
