--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_install:
   - gcloud config set project shaped-timing-292814
   - gcloud config set compute/zone europe-west2-a
   - gcloud container clusters get-credentials multi-cluster
+  - echo "$DOCKER_PASSWORD"
+  - echo "$DOCKER_USERNAME"
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t antoniotre86/react-tests -f ./client/Dockerfile.dev ./client
 
